support 999이하부터 내려오게 수정

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -75,6 +75,7 @@
         </nav>
         </div>
     </header>
+    <!--//header-->
     {% block content %}
 
     {% endblock %}
@@ -104,5 +105,6 @@
             </div>
         </section>
     </footer>
+    <!--//end footer area-->
 </body>
 </html>
