--- a/home/templates/map.html
+++ b/home/templates/map.html
@@ -41,7 +41,7 @@
                 iseeuagain17@gmail.com<br>
                 <h5 class="pt-2">YouTube</h5>
                 <a href="https://www.youtube.com/channel/UCf-FxfM4HXA7oBDmLu_P7AA" target="blank"
-                    style="color: #000;">"또또봄tv"</a><br>
+                    style="color: #000;" title="유튜브 바로가기">"또또봄tv"</a><br>
             </div>
             <!--//연락처 및 주소-->
         </div>
