--- a/home/templates/support.html
+++ b/home/templates/support.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="row" style="padding-top: 20px; margin-bottom: 60px;">
-                <div class="card col-md-4 col-sm-4 col-xs-12" style="border: 0;">
+                <div class="card col-lg-4  col-md-12" style="border: 0;">
                     <div class="card-header" id="headingOne">
                         <h5 class="mb-0 text-center">후원 절차
                         </h5>
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <!--//후원 절차-->
-                <div class="card col-md-4 col-sm-4 col-xs-12" style="border: 0;">
+                <div class="card col-lg-4  col-md-12" style="border: 0;">
                     <div class="card-header" id="headingTwo">
                         <h5 class="mb-0 text-center">후원금 사용처
                         </h5>
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <!--//후원금 사용처-->
-                <div class="card col-md-4 col-sm-4 col-xs-12" style="border: 0;">
+                <div class="card col-lg-4  col-md-12" style="border: 0;">
                     <div class="card-header" id="headingThree">
                         <h5 class="mb-0 text-center">후원 계좌</h5>
                     </div>
