--- a/home/static/css/responsive.css
+++ b/home/static/css/responsive.css
@@ -17,25 +17,8 @@
     font-size: 18px;
     line-height: 28px;
   }
-  
-  /* business.html responsive */
-  .b_cont_wrap {
-    max-width: 1110px;
-    width: 100%;
-  }
-
-  .b_tit {
-    padding-left: 5px;
-    width: 200px;
-   }
-
-   .b_cont {
-     width: 75%;
-     padding-right: 5px;
-   }
-
-  /* end business.html responsive */
 }
+
 /* Tablet desktop :768px. */
 
 @media (min-width: 768px) and (max-width: 991px) {
@@ -133,26 +116,6 @@
   }
 }
 
-
-  /* business responsive */
-  .b_cont_wrap {
-    max-width: 1110px;
-    width: 100%;
-  }
-
-  .b_tit {
-    width: 165px;
-    padding-right: 0;
-    padding-left: 5px;
-  }
-
-  .b_cont {
-    width: 75%;
-    padding-right: 5px;
-  }
-
-  /* end business responsive */
-}
 
 /* small mobile :320px. */
 
@@ -308,40 +271,17 @@
     margin-left: 0;
   }
 
-  /* business responsive */
-  .b_intro_txt {
-    max-width: 330px;
-    width: 100%;
-  }
+   /* business responsive */
+   .b_cont_wrap+.b_cont_wrap .row {
+     border-top: 1px solid #e6e6e6;
+   }
 
-  .b_cont_wrap {
-    max-width: 1110px;
-    width: 100%;
-  }
+   .b_cont_wrap+.b_cont_wrap .b_cont_top {
+     border-top: none;
+   }
 
-  .b_tit {
-    float: none;
-    width: 170px;
-    padding-right: 0;
-    padding-left: 5px;
-  }
+   /* end business responsive */
 
-  .b_cont {
-    padding-left: 5px;
-    padding-right: 5px;
-    float: none;
-    width: 100%;
-  }
-
-  .b_cont_wrap+.b_cont_wrap {
-    border-top: 1px solid #e6e6e6;
-  }
-
-  .b_cont_wrap+.b_cont_wrap .b_cont_top {
-    border-top: none;
-  }
-
-  /* end business responsive */
 }
 
 /* Large Mobile :480px. */
@@ -370,34 +310,22 @@
     padding: 8px 20px;
   }
 
-  /* business responsive */
-  .b_cont_wrap {
-    max-width: 1110px;
-    width: 100%;
-  }
-
-  .b_tit {
-    float: none;
-    width: 170px;
-    padding-right: 0;
-    padding-left: 5px;
-  }
-
-  .b_cont {
-    padding-left: 5px;
-    padding-right: 5px;
-    float: none;
-    width: 100%;
-  }
-
-  .b_cont_wrap+.b_cont_wrap {
+   /* business responsive */
+  .b_cont_wrap+.b_cont_wrap .row {
     border-top: 1px solid #e6e6e6;
   }
 
   .b_cont_wrap+.b_cont_wrap .b_cont_top {
     border-top: none;
   }
-
   /* end business responsive */
 
 }
+
+  /* business responsive */
+@media only screen and (max-width: 360px) {
+  .b_intro_txt br {
+    display: none;
+  }
+}
+  /* end business responsive */
