--- a/home/templates/business.html
+++ b/home/templates/business.html
@@ -200,7 +200,7 @@
         </div>
     </div>
     <!--//third b_cont_wrap-->    
-    <div class="icon_arrowup"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32" title="gotop"></a></div>
+    <div class="icon_arrowup"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32" title="top"></a></div>
 </div>
 <!--//container-->
 
