상단으로 가는 화살표

--- a/home/templates/activity.html
+++ b/home/templates/activity.html
@@ -130,7 +130,8 @@
 
 		</div>
 		<!-- /.row Page Features -->
-
+		<div class="icon_arrowup"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32"
+					title="top"></a></div>
   
 	</div>
 	<!-- /.container -->
