--- a/home/templates/news.html
+++ b/home/templates/news.html
@@ -42,6 +42,8 @@
             </div>
         </div>        
     </div>
+    <div class="icon_arrowup"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32"
+                title="top"></a></div>
 </div>
   
 {% endblock %}
