--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -43,6 +43,10 @@
 
     <!-- Responsive Stylesheet File -->
     <link href="/static/css/responsive.css" rel="stylesheet">
+    
+    <!-- Activity Theme -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
+	<link href="/static/activity.css" rel="stylesheet">
 
     <!-- Google Fonts -->
     <link
