--- a/home/templates/map.html
+++ b/home/templates/map.html
@@ -6,7 +6,7 @@
     <h2 class="text-center">오시는 길</h1>
         <div class="row" style="padding-top: 20px;">
             <!--지도 시작-->
-            <div class="col-sm-6 col-xs-12" style="max-width: 100%;">
+            <div class="col-sm-6 col-xs-12" style="max-width: 100%; padding-bottom: 30px;">
 
                 <div id="daumRoughmapContainer1606110905572"
                     class="root_daum_roughmap root_daum_roughmap_landing" style="max-width: 100%;">
