--- a/home/templates/activity.html
+++ b/home/templates/activity.html
@@ -123,15 +123,15 @@
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-4">
-					<a class="lightbox" href="/static/img/supporters01">
+					<a class="lightbox" href="/static/img/supporters01.jpg">
 						<figure class="figure">
-							<img src="/static/img/act/supporters01" alt="또봄 서포터즈 01">
+							<img src="/static/img/act/supporters01.jpg" alt="또봄 서포터즈 01">
 							<figcaption class="figure-caption text-right">또봄 서포터즈 01</figcaption>
 						</figure>
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-4">
-					<a class="lightbox" href="/static/img/supporters02">
+					<a class="lightbox" href="/static/img/supporters02.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/supporters02" alt="또봄 서포터즈 02">
 							<figcaption class="figure-caption text-right">또봄 서포터즈 02</figcaption>
@@ -139,17 +139,17 @@
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-4">
-					<a class="lightbox" href="/static/img/supporters03">
+					<a class="lightbox" href="/static/img/supporters03.jpg">
 						<figure class="figure">
-							<img src="/static/img/act/supporters03" alt="또봄 서포터즈 03">
+							<img src="/static/img/act/supporters03.jpg" alt="또봄 서포터즈 03">
 							<figcaption class="figure-caption text-right">또봄 서포터즈 03</figcaption>
 						</figure>
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-4">
-					<a class="lightbox" href="/static/img/supporters04">
+					<a class="lightbox" href="/static/img/supporters04.jpg">
 						<figure class="figure">
-							<img src="/static/img/act/supporters04" alt="또봄 서포터즈 04">
+							<img src="/static/img/act/supporters04.jpg" alt="또봄 서포터즈 04">
 							<figcaption class="figure-caption text-right">또봄 서포터즈 04</figcaption>
 						</figure>
 					</a>
