--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -57,10 +57,10 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example" style="padding-top:0;">
-    <header style="margin-bottom: 20px; background-color: #dceff7;">
+    <header style="margin-bottom: 20px; background-color: #000;">
         <div class="container">
-        <nav class="navbar navbar-expand-sm navbar-light" style="margin-top: 0;"> <a href="{% url 'home' %}"
-                class="navbar-brand" style="display: block; width: 150px; height: 50px;"><img src="/static/img/logo.png"
+        <nav class="navbar navbar-expand-sm navbar-dark" style="margin-top: 0;"> <a href="{% url 'home' %}"
+                class="navbar-brand" style="display: block; width: 150px; height: 50px;"><img src="/static/img/logo_Reverse.png"
                     alt="또봄 로고" style="width: 100%;"></a>
             <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
