--- a/home/static/css/activity.css
+++ b/home/static/css/activity.css
@@ -34,6 +34,7 @@ body {
 
 .tz-gallery .lightbox img {
     width: 100%;
+	max-height: 300px;
     margin-bottom: 30px;
     transition: 0.2s ease-in-out;
     box-shadow: 0 2px 3px rgba(0,0,0,0.2);
