--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -59,13 +59,13 @@
 <body data-spy="scroll" data-target="#navbar-example" style="padding-top:0;">
     <header style="margin-bottom: 20px; background-color: #000;">
         <div class="container">
-        <nav class="navbar navbar-expand-sm navbar-dark" style="margin-top: 0;"> <a href="{% url 'home' %}"
+        <nav class="navbar navbar-expand-lg navbar-dark" style="margin-top: 0;"> <a href="{% url 'home' %}"
                 class="navbar-brand" style="display: block; width: 150px; height: 50px;"><img src="/static/img/logo_Reverse.png"
                     alt="또봄 로고" style="width: 100%;"></a>
             <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ">
                     <li class="nav-item"><a href="{% url 'establish' %}" class="nav-link">설립취지</a></li>
                     <li class="nav-item"><a href="{% url 'business' %}" class="nav-link">사업소개</a></li>
                     <li class="nav-item"><a href="{% url 'news' %}" class="nav-link">뉴스</a></li>
