--- a/home/templates/activity.html
+++ b/home/templates/activity.html
@@ -22,7 +22,7 @@
 					<a class="lightbox" href="/static/img/act/media_02.jpg.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/media_02.jpg" alt="또봄 언론소개 02">
-							<figcaption class="figure-caption text-right">또봄 언론소개 02</figcaption>
+							<figcaption class="figure-caption text-center">또봄 언론소개 02</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -30,7 +30,7 @@
 					<a class="lightbox" href="/static/img/act/3th_event_01.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/3th_event_01.jpg" alt="또봄 3주년 행사 01">
-							<figcaption class="figure-caption text-right">또봄 3주년 행사 01</figcaption>
+							<figcaption class="figure-caption text-center">또봄 3주년 행사 01</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -38,7 +38,7 @@
 					<a class="lightbox" href="/static/img/act/3th_event_02.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/3th_event_02.jpg" alt="또봄 3주년 행사 02">
-							<figcaption class="figure-caption text-right">또봄 3주년 행사 02</figcaption>
+							<figcaption class="figure-caption text-center">또봄 3주년 행사 02</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -46,7 +46,7 @@
 					<a class="lightbox" href="/static/img/act/3th_event_03.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/3th_event_03.jpg" alt="또봄 3주년 행사 03">
-							<figcaption class="figure-caption text-right">또봄 3주년 행사 03</figcaption>
+							<figcaption class="figure-caption text-center">또봄 3주년 행사 03</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -54,7 +54,7 @@
 					<a class="lightbox" href="/static/img/act/3th_event_04.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/3th_event_04.jpg" alt="또봄 3주년 행사 04">
-							<figcaption class="figure-caption text-right">또봄 3주년 행사 04</figcaption>
+							<figcaption class="figure-caption text-center">또봄 3주년 행사 04</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -62,7 +62,7 @@
 					<a class="lightbox" href="/static/img/act/3th_event_05.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/3th_event_05.jpg" alt="또봄 3주년 행사 05">
-							<figcaption class="figure-caption text-right">또봄 3주년 행사 05</figcaption>
+							<figcaption class="figure-caption text-center">또봄 3주년 행사 05</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -70,7 +70,7 @@
 					<a class="lightbox" href="/static/img/act/3th_event_06.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/3th_event_06.jpg" alt="또봄 3주년 행사 06">
-							<figcaption class="figure-caption text-right">또봄 3주년 행사 06</figcaption>
+							<figcaption class="figure-caption text-center">또봄 3주년 행사 06</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -78,7 +78,7 @@
 					<a class="lightbox" href="/static/img/act/summer_camp_1st.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/summer_camp_1st.jpg" alt="또봄 첫번째 여름캠프">
-							<figcaption class="figure-caption text-right">또봄 첫번째 여름캠프</figcaption>
+							<figcaption class="figure-caption text-center">또봄 첫번째 여름캠프</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -86,7 +86,7 @@
 					<a class="lightbox" href="/static/img/act/summer_camp01.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/summer_camp01.jpg" alt="또봄 두번째 여름캠프 01">
-							<figcaption class="figure-caption text-right">또봄 두번째 여름캠프 01</figcaption>
+							<figcaption class="figure-caption text-center">또봄 두번째 여름캠프 01</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -94,7 +94,7 @@
 					<a class="lightbox" href="/static/img/act/summer_camp02.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/summer_camp02.jpg" alt="또봄 두번째 여름캠프 02">
-							<figcaption class="figure-caption text-right">또봄 두번째 여름캠프 02</figcaption>
+							<figcaption class="figure-caption text-center">또봄 두번째 여름캠프 02</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -102,7 +102,7 @@
 					<a class="lightbox" href="/static/img/act/winter_camp.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/winter_camp.jpg" alt="또봄 겨울캠프">
-							<figcaption class="figure-caption text-right">또봄 겨울캠프</figcaption>
+							<figcaption class="figure-caption text-center">또봄 겨울캠프</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -110,7 +110,7 @@
 					<a class="lightbox" href="/static/img/act/ChiangMai_campaign_01.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/ChiangMai_campaign_01.jpg" alt="또봄 치앙마이 01">
-							<figcaption class="figure-caption text-right">또봄 치앙마이 해외캠프 01</figcaption>
+							<figcaption class="figure-caption text-center">또봄 치앙마이 해외캠프 01</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -118,7 +118,7 @@
 					<a class="lightbox" href="/static/img/act/ChiangMai_campaign_02.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/ChiangMai_campaign_02.jpg" alt="또봄 치앙마이 02">
-							<figcaption class="figure-caption text-right">또봄 치앙마이 해외캠프 02</figcaption>
+							<figcaption class="figure-caption text-center">또봄 치앙마이 해외캠프 02</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -126,7 +126,7 @@
 					<a class="lightbox" href="/static/img/act/supporters01.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/supporters01.jpg" alt="또봄 서포터즈 01">
-							<figcaption class="figure-caption text-right">또봄 서포터즈 01</figcaption>
+							<figcaption class="figure-caption text-center">또봄 서포터즈 01</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -134,7 +134,7 @@
 					<a class="lightbox" href="/static/img/act/supporters02.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/supporters02.jpg" alt="또봄 서포터즈 02">
-							<figcaption class="figure-caption text-right">또봄 서포터즈 02</figcaption>
+							<figcaption class="figure-caption text-center">또봄 서포터즈 02</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -142,7 +142,7 @@
 					<a class="lightbox" href="/static/img/act/supporters03.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/supporters03.jpg" alt="또봄 서포터즈 03">
-							<figcaption class="figure-caption text-right">또봄 서포터즈 03</figcaption>
+							<figcaption class="figure-caption text-center">또봄 서포터즈 03</figcaption>
 						</figure>
 					</a>
 				</div>
@@ -150,7 +150,7 @@
 					<a class="lightbox" href="/static/img/act/supporters04.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/supporters04.jpg" alt="또봄 서포터즈 04">
-							<figcaption class="figure-caption text-right">또봄 서포터즈 04</figcaption>
+							<figcaption class="figure-caption text-center">또봄 서포터즈 04</figcaption>
 						</figure>
 					</a>
 				</div>
