--- a/home/templates/activity.html
+++ b/home/templates/activity.html
@@ -19,7 +19,7 @@
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-4">
-					<a class="lightbox" href="/static/img/act/media_02.jpg.jpg">
+					<a class="lightbox" href="/static/img/act/media_02.jpg">
 						<figure class="figure">
 							<img src="/static/img/act/media_02.jpg" alt="또봄 언론소개 02">
 							<figcaption class="figure-caption text-center">또봄 언론소개 02</figcaption>
