--- a/home/templates/establish.html
+++ b/home/templates/establish.html
@@ -1,100 +1,108 @@
 <!--설립취지 페이지-->
 {% extends 'base.html' %}
 
-{% block extra_head %}
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-
+{% block extra_script %}
+<style>
+  * {
+    word-break: keep-all !important;
+  }
+</style>
 {% endblock %}
 
 
 {% block content %}
 <div class="container">
-    <div class="row mb-4">
-        <div class="col-lg-6 col-md-12 mb-3 text-center">
-          <img src="../static/img/establish_kyca_1.png" class="img-fluid">
-        </div>
-        <div class="col-lg-6 col-md-12 text-center">
-            <h2>“ 미래를 이끌어갈 코어 2030대, 
-              <br>암 경험자가 마음 편히 치료 받고,
-              <br> 살기 좋은 사회를 만들기 위해 
-              <br>
-              <br><span class="text-success">KYCA또봄</span>이 함께 합니다”</h2>
-        </div>
+  <div class="row mb-5">
+    <div class="col-lg-6 col-md-12 mb-3">
+      <p class="display-4 text-success">건강한 당신을 <br class="d-none d-sm-block">또 보고 싶습니다, <br> See u Again</p>
+      <h2 class="font-weight-lighter">미래를 이끌어갈 코어 2030대,
+        <br class="d-none d-sm-block">암 경험자가 마음 편히 치료 받고,
+        <br class="d-none d-sm-block"> 살기 좋은 사회를 만들기 위해
+        <br class="d-none d-sm-block"><span class="text-success font-weight-bolder">KYCA또봄</span>이 함께 합니다</h2>
+
     </div>
-    <div class="row">
-      <div class="col text-center mt-3 mb-4">
-        <p class="h1 text-success">건강한 당신을 또 보고 싶습니다, I See u Again</p>
-      </div>     
+    <div class="col-lg-6 col-md-12">
+      <img src="../static/img/establish_kyca_1.png" class="img-fluid" style="width: 100%;">
     </div>
-    <div class="row row-cols-1 row-cols-md-2">
-        <div class="col mb-4 ">
-          <div class="card mb-5 border-0" style="min-height: 300px;">
-              <div class="card-body">
-              <h5 class="card-title font-weight-bold">[젊은 암 경험자를 위한 <span class="h3 font-weight-bold">국내 최초</span>]</h5>
-              <p class="card-text">
-                한국청년암협회또봄은 국내 최초로 20, 30대 젊은 암 경험자들에게 극복 momentum과 삶을 가치 있게 살 수 
-                있도록 지원, 소통하기 위해 설립된 비영리 기관입니다. 2016년 12월 작은 프로젝트를 시작으로 꾸준한 활동을 하였고, 
-                2020년 8월 서울시 정식 비영리 사단법인 허가를 받아 젊은 암 경험자를 위한 투명하면서 진정성 있는 기관으로 발돋움 하고자 합니다.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="card mb-5 border-0" style="min-height: 300px;">
-              <div class="card-body">
-              <h5 class="card-title font-weight-bold">[젊은 암 경험자가 <span class="h3 font-weight-bold">직접 만든</span>]</h5>
-              <p class="card-text">
-                2015년 7월 버킷림포마 4기 선고를 받고 난 후 힘든 투병생활과 극복한 경험을 바탕으로 그들이 어떤 부분이 필요한지를 알고 있습니다. 직접 경험한 것만큼 설립 목표가 분명한 것은 없다고 생각합니다. 그래서 어떤 부분이 필요하고 부족한 지에 대해 알고 있으며, 저 뿐만 아니라 다른 젊은 암 경험자들과 소통하며 진정으로 필요한 부분을 찾고 그를 해결하기 위해 지속적으로 사업동반자를 확대하고 긴밀한 협력을 진행하고자 합니다.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="card mb-5 border-0" style="min-height: 300px;">
-              <div class="card-body">
-              <h5 class="card-title font-weight-bold">[젊은 암 경험자에게 <span class="h3 font-weight-bold">필요한</span>]</h5>
-              <p class="card-text">
-                국민의 3분의 1이 암을 겪는 이 시대에 젊은 암 경험자는 다른 세대층에 비해 증가추세가 높지만 80년대 이전에 머물러 있는 암 환자에 대한 잘못된 인식과 편견으로 인해 나서는 사람이 없었습니다. 그러다 보니 빙산의 일부분만 보였고, 사회적 관계(직장생활, 결혼 등), 재취업 등 앞으로 발생할 수 있는 사회적 문제에 대해 해결하고자 하는 곳이 없었습니다. 이를 한국청년암협회또봄이 앞장서서 해결하고자 합니다.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="card mb-5 border-0" style="min-height: 300px;">
-              <div class="card-body">
-              <h5 class="card-title font-weight-bold">[젊은 암 경험자가 <span class="h3 font-weight-bold">살기 좋은</span>]</h5>
-              <p class="card-text">
-                사회에 꼭 필요한 세대, 그렇기 때문에 암 투병 시 누구보다 자기부정도 많고, 생각해야 할 것도 많은 것이 젊은 암 경험자입니다. 또한 극복 후에도 암 경험자임을 숨겨야 하고 다시 치열한 사회 경쟁 속에 놓일 수 밖에 없는 것이 현실입니다. 아직 우리 나라에서는 2030대 젊은 암 경험자가 암 투병 전후에 치료에 집중할 수 있는 환경이 조성되어 있지 않습니다. 이런 부분에 필요한 제도, 법률, 인식 개선에 한국청년암협회또봄이 함께 하고자 합니다. 나아가 국내 뿐 만이 아닌 젊은 암 경험자를 위한 국제기구로 발전하고자 합니다.
-              </p>
-            </div>
-          </div>
-        </div>
+  </div>
+
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4">
+    <div class="col mb-4 ">
+      <div class="card mb-5 border-0">
+
+        <h5 class="card-title font-weight-bold">젊은 암 경험자를 위한 <br><span class="h3 font-weight-bold">국내 최초</span></h5>
+        <p class="card-text">
+          한국청년암협회또봄은 국내 최초로 20, 30대 젊은 암 경험자들에게 극복 momentum과 삶을 가치 있게 살 수
+          있도록 지원, 소통하기 위해 설립된 비영리 기관입니다. 2016년 12월 작은 프로젝트를 시작으로 꾸준한 활동을 하였고,
+          2020년 8월 서울시 정식 비영리 사단법인 허가를 받아 젊은 암 경험자를 위한 투명하면서 진정성 있는 기관으로 발돋움 하고자 합니다.
+        </p>
       </div>
 
-    <div class="row mb-5">
-      <div class="col-md-12">
-          <p class="h3 text-secondary">한국청년암협회또봄 CI</p>
-      </div>
-      <div class="col-md-12 mb-4">
-        <p class="h5 text-secondary">또봄의 로고는 계절을 암 경험자의 주기를 빗대어 각 네모를 계절의 색깔로 표현했으며, 
-          이를 이겨내어 새로운 봄, 사계절이 지나 다시 찾아오는 봄처럼 건강하고 행복한 모습을 의미하고 있습니다.</p>
-      </div>    
-        <div class="col-lg-6 col-md-12 mb-4">
-             <img src="/static/img/img_about02.png" alt="" class="img-fluid">
-        </div>
-        <div class="col-lg-6 col-md-12">
-            <p class="text-secondary mb-1">여름 : 암 투병 전 활동적인</p>
-            <p class="text-secondary mb-1">가을 : 암 투병을 하면서 외롭고 고독한</p>
-            <p class="text-secondary mb-1">겨울 : 암 투병을 지속되면서 힘들고 지친</p>
-            <p class="text-secondary mb-1">봄 : 암 투병을 이겨내고 새롭고, 다시 시작하는</p>
-        </div>
     </div>
-    <div class="icon_arrowup"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32"
-          title="top"></a></div>
+    <div class="col mb-4">
+      <div class="card mb-5 border-0">
+
+        <h5 class="card-title font-weight-bold">젊은 암 경험자가 <br><span class="h3 font-weight-bold">직접 만든</span></h5>
+        <p class="card-text">
+          2015년 7월 버킷림포마 4기 선고를 받고 난 후 힘든 투병생활과 극복한 경험을 바탕으로 그들이 어떤 부분이 필요한지를 알고 있습니다. 직접 경험한 것만큼 설립 목표가 분명한 것은 없다고
+          생각합니다. 그래서 어떤 부분이 필요하고 부족한 지에 대해 알고 있으며, 저 뿐만 아니라 다른 젊은 암 경험자들과 소통하며 진정으로 필요한 부분을 찾고 그를 해결하기 위해 지속적으로 사업동반자를
+          확대하고 긴밀한 협력을 진행하고자 합니다.
+        </p>
+      </div>
+
+    </div>
+    <div class="col mb-4">
+      <div class="card mb-5 border-0">
+
+        <h5 class="card-title font-weight-bold">젊은 암 경험자에게<br><span class="h3 font-weight-bold">필요한</span></h5>
+        <p class="card-text">
+          국민의 3분의 1이 암을 겪는 이 시대에 젊은 암 경험자는 다른 세대층에 비해 증가추세가 높지만 80년대 이전에 머물러 있는 암 환자에 대한 잘못된 인식과 편견으로 인해 나서는 사람이 없었습니다.
+          그러다 보니 빙산의 일부분만 보였고, 사회적 관계(직장생활, 결혼 등), 재취업 등 앞으로 발생할 수 있는 사회적 문제에 대해 해결하고자 하는 곳이 없었습니다. 이를 한국청년암협회또봄이 앞장서서
+          해결하고자 합니다.
+        </p>
+      </div>
+
+    </div>
+    <div class="col mb-5">
+      <div class="card mb-5 border-0">
+
+        <h5 class="card-title font-weight-bold">젊은 암 경험자가<br><span class="h3 font-weight-bold">살기 좋은</span></h5>
+        <p class="card-text">
+          사회에 꼭 필요한 세대, 그렇기 때문에 암 투병 시 누구보다 자기부정도 많고, 생각해야 할 것도 많은 것이 젊은 암 경험자입니다. 또한 극복 후에도 암 경험자임을 숨겨야 하고 다시 치열한 사회 경쟁
+          속에 놓일 수 밖에 없는 것이 현실입니다. 아직 우리 나라에서는 2030대 젊은 암 경험자가 암 투병 전후에 치료에 집중할 수 있는 환경이 조성되어 있지 않습니다. 이런 부분에 필요한 제도, 법률,
+          인식 개선에 한국청년암협회또봄이 함께 하고자 합니다. 나아가 국내 뿐 만이 아닌 젊은 암 경험자를 위한 국제기구로 발전하고자 합니다.
+        </p>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="row mb-5">
+    <div class="col-md-4 text-secondary">
+      <h3>한국청년암협회 <br>또봄 CI</h3>
+      <h5>또봄의 로고는 계절을 암 경험자의 주기를 빗대어 각 네모를 계절의 색깔로 표현했으며,
+        이를 이겨내어 새로운 봄, 사계절이 지나 다시 찾아오는 봄처럼 건강하고 행복한 모습을 의미하고 있습니다.</h5>
+
+      <dl class="row">
+        <dt class="col-sm-3">여름</dt>
+        <dd class="col-sm-9">암 투병 전 활동적인</dd>
+        <dt class="col-sm-3">가을</dt>
+        <dd class="col-sm-9">암 투병을 하면서 외롭고 고독한</dd>
+        <dt class="col-sm-3">겨울</dt>
+        <dd class="col-sm-9">암 투병을 지속되면서 힘들고 지친</dd>
+        <dt class="col-sm-3">봄</dt>
+        <dd class="col-sm-9">암 투병을 이겨내고 새롭고, 다시 시작하는</dd>
+      </dl>
+
+    </div>
+
+    <div class="col-md-8 mb-4">
+      <img src="/static/img/img_about02.png" alt="" class="img-fluid">
+    </div>
+
+  </div>
+  <div class="icon_arrowup"><a href="#"><img src="/static/img/icon/arrow-up.svg" alt="" width="32" height="32"
+        title="top"></a></div>
 </div>
 
-   
-  
 {% endblock %}
