--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -59,9 +59,9 @@
 <body data-spy="scroll" data-target="#navbar-example" style="padding-top:0;">
     <header style="margin-bottom: 20px; background-color: #000;">
         <div class="container">
-            <nav class="navbar navbar-expand-sm navbar-light" style="margin-top: 0;"> <a href="{% url 'home' %}"
+            <nav class="navbar navbar-expand-lg navbar-dark" style="margin-top: 0;"> <a href="{% url 'home' %}"
                     class="navbar-brand" style="display: block; width: 150px; height: 50px;"><img
-                        src="/static/img/logo.png" alt="또봄 로고" style="width: 100%;"></a>
+                        src="/static/img/logo_Reverse.png" alt="또봄 로고" style="width: 100%;"></a>
                 <!-- Toggle Button --> <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -85,7 +85,6 @@
     {% endblock %}
 
     <!-- Start Footer bottom Area -->
-    <hr>
     <footer class="bg-dark text-white text-center py-5 mt-3">
         <div class="container">
             <p style="font-size:13px">주소 : 서울특별시 강남구 테헤란로 2길 8, 4층 17호(역삼동, 마이워크 스페이스) “한국청년암협회 또봄”<br>
