--- a/home/templates/viewboard.html
+++ b/home/templates/viewboard.html
@@ -4,6 +4,7 @@
 
     <h1>게시글 개별 페이지입니다</h1>
     <p>{{post.title}}</p>
+    <p>{{post.url}}</p>
     <p>{{post.text}}</p>
     <p>{{post.pub_date}}</p>
     {% if post.mainphoto %}
