main(201127_메인영상교체)

--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -11,6 +11,7 @@
 
   <!-- Bootstrap CSS File -->
   <link href="/static/css/bootstrap-grid.css" rel="stylesheet">
+  <link href="/static/css/bootstrap.min.css" rel="stylesheet">
  
   
   <!-- Libraries CSS Files -->
@@ -65,21 +66,27 @@
 <!-- header end -->
 
   <!-- Start Video Area -->
-    <div id="video-container">
-      <div class="video-overlay"></div>
-        <div class="video-content">
-          <div class="inner">
-            <h1>Welcome to</h1>
-              <p>한국청년암협회 또봄</p>
-                <p></p>
-                  <div class="scroll-icon">
-                    <a class="page-scroll" href="#about"><img src="/static/img/main/scroll-icon.png" alt=""></a>
-                  </div>
-          </div>
+  <div id="video-container">
+    <div class="video-overlay"></div>
+      <div class="video-content">
+        <div class="inner">
+          <!--<h1>Welcome to</h1>-->
+            <!--<p>한국청년암협회</p>-->
+              <p></p>
+                <div class="scroll-icon">
+                  <a class="page-scroll" href="#about"><img src="/static/img/main/scroll-icon.png" alt=""></a>
+                </div>
         </div>
-        <video autoplay="" loop="" muted>
-        <source src="https://t1.kakaocdn.net/kakaocorp/main/kakao10/img/corp_pc.mp4"></video>
+      </div>
+      <div class="video-background">
+        <div class="video-foreground">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/28M16_GpgxQ?autoplay=1&mute=1&loop=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
     </div>
+  </div>
+<!-- End Video Area -->
+
+ 
   <!-- End Video Area -->
 
   <!-- Start About area -->
