--- a/home/static/css/main.css
+++ b/home/static/css/main.css
@@ -461,6 +461,25 @@ div#preloader {
 #video-container .video-content .inner .scroll-icon {
   margin-top: 45px;
 }
+
+* { box-sizing: border-box; }
+.video-background {
+  background: #000;
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  z-index: -99;
+}
+.video-foreground,
+.video-background iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+}
 /*--------------------------------*/
 
 /* 2.1. Stick menu
