메인 푸터 재수정

--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -419,19 +419,11 @@
   <!-- End Support Area -->
 
   <!-- Start Footer bottom Area -->
-  <footer class="text-white text-center py-5 mt-3" style="background-color:black;">
+  <footer class="text-white text-center py-5 mt-3" style="background-color:black; margin-top: 0 !important; ">
     <div class="container">
       <p style="font-size:13px; color: #fff;">주소 : 서울특별시 강남구 테헤란로 2길 8, 4층 17호(역삼동, 마이워크 스페이스) “한국청년암협회 또봄”<br>
         연락처 : 010-9414-4879 | 대표 : 이정훈
       </p>
-      <ul class="list-unstyled list-inline social text-center">
-        <li class="list-inline-item"><a href="https:www.facebook.com/iseeua.page" title="페이스북" target="blank"><i
-              class="fa fa-facebook"></i></a></li>
-        <li class="list-inline-item" style="color: #fff;"><a href="https:www.instagram.com/iseeuagain/" title="인스타그램" target="blank"><i
-              class="fa fa-instagram"></i></a></li>
-        <li class="list-inline-item"><a href="https://www.youtube.com/channel/UCf-FxfM4HXA7oBDmLu_P7AA" title="유튜브"
-            target="blank"><i class="fa fa-play"></i></a></li>
-      </ul>
       Copyright © 한국청년암협회 또봄 Corp. All rights reserved.
     </div>
   </footer>
