--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -46,7 +46,7 @@
 
     <!-- Activity Theme -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
-    <link href="/static/activity.css" rel="stylesheet">
+    <link href="/static/css/activity.css" rel="stylesheet">
 
     <!-- Google Fonts -->
     <link
