활동모습 사진 추가

--- a/home/templates/activity.html
+++ b/home/templates/activity.html
@@ -154,6 +154,86 @@
 						</figure>
 					</a>
 				</div>
+				<div class="col-sm-6 col-md-4">
+					<a class="lightbox" href="/static/img/act/diary_01.jpg">
+						<figure class="figure">
+							<img src="/static/img/act/diary_01.jpg" alt="병상일기 01">
+							<figcaption class="figure-caption text-center">병상일기 01</figcaption>
+						</figure>
+					</a>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<a class="lightbox" href="/static/img/act/diary_02.jpg">
+						<figure class="figure">
+							<img src="/static/img/act/diary_02.jpg" alt="병상일기 02">
+							<figcaption class="figure-caption text-center">병상일기 02</figcaption>
+						</figure>
+					</a>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<a class="lightbox" href="/static/img/act/photobook_01.jpg">
+						<figure class="figure">
+							<img src="/static/img/act/photobook_01.jpg" alt="포토북 출간기념">
+							<figcaption class="figure-caption text-center">포토북 출간기념</figcaption>
+						</figure>
+					</a>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<a class="lightbox" href="/static/img/act/photobook_02.jpg">
+						<figure class="figure">
+							<img src="/static/img/act/photobook_02.jpg" alt="포토북 출판기념 콘서트 포스터">
+							<figcaption class="figure-caption text-center">포토북 출판기념 콘서트 포트섵</figcaption>
+						</figure>
+					</a>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<a class="lightbox" href="/static/img/act/photobook_03.jpg">
+						<figure class="figure">
+							<img src="/static/img/act/photobook_03.jpg" alt="포토북 전달식 01">
+							<figcaption class="figure-caption text-center">포토북 전달식 01</figcaption>
+						</figure>
+					</a>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<a class="lightbox" href="/static/img/act/photobook_04.jpg">
+						<figure class="figure">
+							<img src="/static/img/act/photobook_04.jpg" alt="포토북 전달식 02">
+							<figcaption class="figure-caption text-center">포토북 전달식 02</figcaption>
+						</figure>
+					</a>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<a class="lightbox" href="/static/img/act/calss_01.jpg">
+						<figure class="figure">
+							<img src="/static/img/act/calss_01.jpg" alt="캘리그라피 포스터">
+							<figcaption class="figure-caption text-center">캘리그라피 포스터</figcaption>
+						</figure>
+					</a>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<a class="lightbox" href="/static/img/act/calss_01_01.jpg">
+						<figure class="figure">
+							<img src="/static/img/act/calss_01_01.jpg" alt="또봄 클래스 - 캘리그라피">
+							<figcaption class="figure-caption text-center">또봄 클래스 - 캘리그라피</figcaption>
+						</figure>
+					</a>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<a class="lightbox" href="/static/img/act/calss_02.jpg">
+						<figure class="figure">
+							<img src="/static/img/act/calss_02.jpg" alt="캘리그라피 모임">
+							<figcaption class="figure-caption text-center">캘리그라피 모임</figcaption>
+						</figure>
+					</a>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<a class="lightbox" href="/static/img/act/calss_03.jpg">
+						<figure class="figure">
+							<img src="/static/img/act/calss_03.jpg" alt="캘리그라피">
+							<figcaption class="figure-caption text-center">캘리그라피</figcaption>
+						</figure>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
