--- a/home/templates/activity.html
+++ b/home/templates/activity.html
@@ -211,9 +211,9 @@
 					</a>
 				</div>
 				<div class="col-sm-6 col-md-4">
-					<a class="lightbox" href="/static/img/act/calss_01_01.jpg">
+					<a class="lightbox" href="/static/img/act/calss_01_01.png">
 						<figure class="figure">
-							<img src="/static/img/act/calss_01_01.jpg" alt="또봄 클래스 - 캘리그라피">
+							<img src="/static/img/act/calss_01_01.png" alt="또봄 클래스 - 캘리그라피">
 							<figcaption class="figure-caption text-center">또봄 클래스 - 캘리그라피</figcaption>
 						</figure>
 					</a>
