--- a/home/templates/support.html
+++ b/home/templates/support.html
@@ -2,12 +2,11 @@
 {% extends 'base.html' %}
 
 {%block content %}
-<div class="container">
-    <div class="page-header text-center">
-        <div class="col-md-12 col-md-offset-3">
-            <h2>후원 하기</h3>
-        </div>
-    </div>
+<div class="container" style="min-height: 80vh;">
+    <h3 class="display-4 my-5 text-center">
+        
+            후원 하기</h3>
+
     <div class="row" style="padding-top: 20px; margin-bottom: 60px;">
                 <div class="card col-lg-4  col-md-12" style="border: 0; padding: 0 25px 20px 25px;">
                     <div class="card-header" id="headingOne">
