홈 영상 추가

--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -70,17 +70,16 @@
     <div class="video-overlay"></div>
       <div class="video-content">
         <div class="inner">
-          <!--<h1>Welcome to</h1>-->
-            <!--<p>한국청년암협회</p>-->
+          <h1>한국청년암협회</h1>
+            <h1>또봄</h1>
               <p></p>
                 <div class="scroll-icon">
                   <a class="page-scroll" href="#about"><img src="/static/img/main/scroll-icon.png" alt=""></a>
                 </div>
         </div>
       </div>
-      <div class="video-background">
-        <div class="video-foreground">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/28M16_GpgxQ?autoplay=1&mute=1&loop=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <video autoplay="" loop="" muted>
+        <source src="/static/img/main/fullscreen.mp4" type="video/mp4"></video>
       </div>
     </div>
   </div>
