--- a/home/templates/scontent.html
+++ b/home/templates/scontent.html
@@ -21,7 +21,7 @@
 						국내 최초 젊은 암 경험자(투병자&경험자)를 돕는 비영리법인 <b>'또봄'</b>과
 						유튜브를 시작하게 된 특별한 이유에 대해서 말합니다.</p>
 					<div class="  d-flex mt-3 mb-1">
-						<a class="btn btn-outline-dark btn-md  mt-md-3 text-dark  " href="https://www.youtube.com/channel/UCf-FxfM4HXA7oBDmLu_P7AA" role="button">자세히 보기</a>
+						<a class="btn btn-outline-dark btn-md  mt-md-3 text-dark  " href="https://www.youtube.com/channel/UCf-FxfM4HXA7oBDmLu_P7AA" target="_blank"  role="button">자세히 보기</a>
 					</div>
 				</div>
 
