main(201127_프로젝트수정,활동모습삭제)

--- a/home/templates/main.html
+++ b/home/templates/main.html
@@ -144,97 +144,6 @@
   </div>
   <!-- End About area -->
 
-  <!-- Start Slider Area 
- <div id="services" class="services-area area-padding">
-  <div class="section-headline services-head text-center">
-      <h2>Project</h2>
-    </div>
-  <div id="home" class="slider-area">
-    <div class="bend niceties preview-2">
-      <div id="ensign-nivoslider" class="slides">
-        <img src="/static/img/main/slider.jpg" alt="" title="#slider-direction-1" />
-        <img src="/static/img/main/slider2.jpg" alt="" title="#slider-direction-2" />
-        <img src="/static/img/main/slider3.jpg" alt="" title="#slider-direction-3" />
-      </div>
-
-   
-      <div id="slider-direction-1" class="slider-direction slider-one">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12 col-sm-12 col-xs-12">
-              <div class="slider-content">
-           
-                <div class="layer-1-1 hidden-xs wow slideInDown" data-wow-duration="2s" data-wow-delay=".2s">
-                  <h2 class="title1">젊은 암 경험자의 회복과 정서적 지원 및 권익을 위한 사업</h2>
-                </div>
-              
-                <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">암 경험자간 소통 모임 기획 및 지원</h1>
-                  <h1 class="title2">여행버킷챌린지 ‘앎’ 캠페인</h1>
-                </div>
-                
-                <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                  <a class="ready-btn right-btn page-scroll" href="business">자세히보기</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-     
-      <div id="slider-direction-2" class="slider-direction slider-two">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12 col-sm-12 col-xs-12">
-              <div class="slider-content text-center">
-               
-                <div class="layer-1-1 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                  <h2 class="title1">젊은 암 경험자에 대한 치료 환경 및 인식 개선과 이를 위한 정책 제안 사업</h2>
-                </div>
-              
-                <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">의학, 치료제 관련 의학 세미나 개최</h1>
-                  <h1 class="title2">유튜브 채널 운영</h1>
-                </div>
-                
-                <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                  <a class="ready-btn right-btn page-scroll" href="business">자세히보기</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div id="slider-direction-3" class="slider-direction slider-two">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12 col-sm-12 col-xs-12">
-              <div class="slider-content">
-            
-                <div class="layer-1-1 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                  <h2 class="title1">젊은 암 경험자를 위한 예방, 치료, 회복에 관한 출판, 교육, 홍보 등의<br> 사업</h2>
-                </div>
-             
-                <div class="layer-1-2 wow slideInUp" data-wow-duration="2s" data-wow-delay=".1s">
-                  <h1 class="title2">온라인/오프라인 홍보 브로셔 발간</h1>
-                  <h1 class="title2">홍보 영상 제작/배포</h1>
-                </div>
-           
-                <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                  <a class="ready-btn right-btn page-scroll" href="business">자세히보기</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>-->
-  <!-- End Slider Area -->
-
-
 <!-- Start Service area -->
 <div id="services" class="services-area area-padding">
   <div class="section-headline services-head text-center">
@@ -243,164 +152,54 @@
   <div class="wrapper grid">
     <div class="item">
       <a class="services-icon" href="business">
-         <i class="fas fa-paper-plane"></i></a>
-          <h4>여행버킷리스트</h4>
+         <i class="fas fa-heart"></i></a>
+          <h4>암 경험자간 소통 모임 기획 및 지원</h4>
             <p>
-              암투병 중인 환자가 완치 후 가고싶은 해외여행지를 설정, 달성 시 동행 및 여행경비 지원
+              
             </p>
     </div>
     <div class="item">
       <a class="services-icon" href="business">
-        <i class="fa fa-camera-retro"></i></a>
-          <h4>여행포토북</h4>
+        <i class="fas fa-paper-plane"></i></a>
+          <h4>여행버킷챌린지 ‘앎’ 캠페인</h4>
             <p>
-              여행버킷리스트를 가고 싶은 의지를 불러일으킬 수 있는 매개체
-            </p>
-    </div>
-    <div class="item">
-      <a class="services-icon" href="business">
-        <i class="fas fa-heart"></i></a>
-          <h4>봉사활동</h4>
-            <p>
-              암을 극복한 사람들이 암환자에게 전하는 해피 바이러스 봉사
+              
             </p>
     </div>
     <div class="item">
       <a class="services-icon" href="business">
         <i class="fas fa-icons"></i></a>
-          <h4>Social</h4>
+          <h4>의학, 치료제 관련 의학 세미나 개최</h4>
             <p>
-              암환자와 소통하고 응원할 수 있는 소셜 채널 만들기, 힐링 콘서트
+              
+            </p>
+    </div>
+    <div class="item">
+      <a class="services-icon" href="business">
+        <i class="fab fa-youtube"></i></a>
+          <h4>유튜브 채널 '또또봄tv' 운영</h4>
+            <p>
             </p>
               </div>
     <div class="item">
       <a class="services-icon" href="business">
         <i class="fas fa-seedling"></i></a>
-          <h4>기부</h4>
+          <h4>온라인/오프라인 홍보 브로셔 발간</h4>
             <p>
-              치료비가 부족하여 치료가 어려운 2030대 암환자에게 치료비<br> 지원하기
+            
             </p>
     </div>
     <div class="item">
       <a class="services-icon" href="business">
         <i class="far fa-lightbulb"></i></a>
-          <h4>Support</h4>
+          <h4>홍보 영상 제작/배포</h4>
             <p>
-              암 극복 후 재취업 지원
+              
             </p>
     </div>
   </div>
   </div>
   <!-- End Service area -->
-
-
-   <!-- Start Activity Area -->
-   <div id="portfolio" class="portfolio-area area-padding fix">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <div class="section-headline text-center">
-            <h2>Activity</h2>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-          <div class="col-md-4 col-sm-4 col-xs-12 photo">
-            <div class="single-awesome-project">
-              <div class="awesome-img">
-                <a href="#"><img src="/static/img/main/main1.jpg" alt="" /></a>
-                <div class="add-actions text-center">
-                  <div class="project-dec">
-                      <h4>후원인의 밤</h4>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- single-awesome-project end -->
-          <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 photo">
-            <div class="single-awesome-project">
-              <div class="awesome-img">
-                <a href="#"><img src="/static/img/main/main2.jpg" alt="" /></a>
-                <div class="add-actions text-center">
-                  <div class="project-dec">
-                      <h4>포토북</h4>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- single-awesome-project end -->
-          <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 photo">
-            <div class="single-awesome-project">
-              <div class="awesome-img">
-                <a href="#"><img src="/static/img/main/main3.jpg" alt="" /></a>
-                <div class="add-actions text-center">
-                  <div class="project-dec">
-                      <h4>재능기부 클래스</h4>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- single-awesome-project end -->
-          <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 photo">
-            <div class="single-awesome-project">
-              <div class="awesome-img">
-                <a href="#"><img src="/static/img/main/main4.jpg" alt="" /></a>
-                <div class="add-actions text-center">
-                  <div class="project-dec">
-                      <h4>3주년 앙상블 파티</h4>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- single-awesome-project end -->
-          <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 photo">
-            <div class="single-awesome-project">
-              <div class="awesome-img">
-                <a href="#"><img src="/static/img/main/main5.jpg" alt="" /></a>
-                <div class="add-actions text-center text-center">
-                  <div class="project-dec">
-                      <h4>여름캠프</h4>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- single-awesome-project end -->
-          <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 photo">
-            <div class="single-awesome-project">
-              <div class="awesome-img">
-                <a href="#"><img src="/static/img/main/main6.jpg" alt="" /></a>
-                <div class="add-actions text-center">
-                  <div class="project-dec">
-                      <h4>Youtube 운영</h4>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- single-awesome-project end -->
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- awesome-portfolio end -->
-
-
 
   <!-- Start Support Area -->
   <div class="suscribe-area">
