--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -56,7 +56,7 @@
     {% endblock %}
 </head>
 
-<body data-spy="scroll" data-target="#navbar-example" style="padding-top:0;">
+<body data-spy="scroll" data-target="#navbar-example" style="padding-top:0; padding-bottom: 0;">
     <header style="margin-bottom: 20px; background-color: #000;">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-dark" style="margin-top: 0;"> <a href="{% url 'home' %}"
