--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -88,7 +88,7 @@
     <footer class="text-white text-center py-5 mt-3" style="background-color:black;">
         <div class="container">
             <p style="font-size:13px">주소 : 서울특별시 강남구 테헤란로 2길 8, 4층 17호(역삼동, 마이워크 스페이스) “한국청년암협회 또봄”<br>
-                연락처 : 010-9414-4879 | 대표 : 이정훈
+                E-mail : iseeuagain17@gmail.com | 대표 : 이정훈
             </p>
             <ul class="list-unstyled list-inline social text-center">
                 <li class="list-inline-item"><a href="https:www.facebook.com/iseeua.page" title="페이스북" target="blank"><i
