--- a/home/templates/support.html
+++ b/home/templates/support.html
@@ -17,8 +17,7 @@
                     <div id="collapseOne">
                         <div class="card-body">
                             또봄에 후원을 하는 절차를 안내 해 드립니다.<br>
-                            후원 방식은 저희 또봄 계좌로 보내주시되,<br>
-                            정회원분들께선 '회비계좌'로 후원부탁드리겠습니다.<br>
+                            후원 방식은 '후원계좌'에 적혀있는 또봄 계좌로 후원해 주시면 되겠습니다.<br>
                             또봄 후원활동에 감사 드립니다.<br>
                             후원하신 모든 회원께서는 자동으로 후원자로 등록 됨을 알려드립니다.
                         </div>
@@ -52,8 +51,6 @@
                         <div class="card-body">
                             후원금계좌<br>
                             sc제일은행 202-20-132734<br> (사단법인 한국청년암협회 또봄)<br><br>
-                            회비계좌(정회원)<br>
-                            sc제일은행 202-20-132745<br> (사단법인 한국청년암협회 또봄)
                         </div>
                     </div>
                 </div>
